--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,14 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>1.8</java.version>
-	</properties>
+        <java.version>11</java.version>
+        <spring-cloud.version>2024.0.1</spring-cloud.version>
+        <springdoc-openapi-starter-webmvc-ui.version>2.7.0</springdoc-openapi-starter-webmvc-ui.version>
+        <hibernate-validator.version>8.0.2.Final</hibernate-validator.version>
+        <assertj-core.version>3.27.3</assertj-core.version>
+        <cucumber.version>7.20.1</cucumber.version>
+        <junit-platform-suite.version>6.0.0</junit-platform-suite.version>
+    </properties>
 
 	<dependencies>
 		<dependency>
@@ -42,6 +48,19 @@
 			<artifactId>lombok</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit-platform-engine</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>test</scope>
+        </dependency>
+    
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-suite</artifactId>
+            <version>${junit-platform-suite.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
